Refs #13905 !strict. Minor cosmetic fixes. Background image for SpinWheel on IE. The custom theme's font size.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@26816 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/custom/variables.less
+++ b/mobile/themes/custom/variables.less
@@ -57,10 +57,10 @@
 @theme-tabbar-font-size: @theme-default-font-size - 3;
 @theme-tabbar-font-family: @theme-default-font-family;
 @theme-tabbar-font-weight: @theme-default-font-weight;
-@theme-category-font-size: @theme-default-font-size;
+@theme-category-font-size: @theme-highlight-font-size;
 @theme-category-font-family: @theme-highlight-font-family;
-@theme-category-font-weight: @theme-highlight-font-weight;
-@theme-category-text-shadow: none;
+@theme-category-font-weight: @theme-default-font-weight;
+@theme-category-text-shadow: @theme-highlight-text-shadow;
 @theme-list-item-font-size: @theme-highlight-font-size;
 @theme-list-item-font-family: @theme-default-font-family;
 @theme-list-item-font-weight: @theme-default-font-weight;
@@ -267,7 +267,7 @@
 	font-weight: @theme-category-font-weight;
 	text-shadow: @theme-category-text-shadow;
 	color: @theme-category-color;
-	line-height: @theme-category-height;
+	line-height: @theme-category-height + 2;
 }
 
 //----------------------------------------------------------------
